Check path omniauth

--- a/app/views/application/_unsigned_for_template.html.erb
+++ b/app/views/application/_unsigned_for_template.html.erb
@@ -21,7 +21,12 @@
 
     <%= link_to 'Sign in', new_user_session_path, class: ["nav-link active"] %>
     <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path, class: ["nav-link active"] %>
-
+    puts ''
+    puts ''
+    puts ''
+    puts ''
+    print "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
+    puts ''
     <%= link_to 'Sign up', new_user_registration_path, class: ["nav-link active"] %>
 
   </div>
