--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -1,12 +1,27 @@
-<div class="container card" style="width: 40rem;" >
-  <div class="card-body">
-    <h3 class="card-title">
-      <%= @campaign.title %>
-    </h3>
-    <p class="card-text">
-      <%= @campaign.sketch %>
-    </p>
-    <%= link_to 'Edit', edit_campaign_path(@campaign) %>
-    <%= link_to 'Delete', campaign_path(@campaign) , method: :delete %>
+<div class="container" style="width: 50rem;" >
+  <div class="card" >
+    <div class="card-body">
+      <h2 class="card-title">
+        <%= @campaign.title %>
+      </h2>
+      <p class="card-text">
+        <%= @campaign.sketch %>
+      </p>
+      <%= link_to 'Edit', edit_campaign_path(@campaign) %>
+      <%= link_to 'Delete', campaign_path(@campaign) , method: :delete %>
+    </div>
   </div>
+</div>
+<hr>
+<div class="container" style="width: 47rem;" >
+  <h4>
+    <%= @campaign.comments.count %> Comments
+  </h4>
+  <hr>
+</div>
+<div class="container" style="max-width: 47rem;">
+    <%= render 'comments/form' %>
+    <% @campaign.comments[0..-2].reverse_each do |comment|%>
+      <%= render partial: "comments/comment", locals: {c: comment} %>
+    <% end %>
 </div>
